--- a/Movies.css
+++ b/Movies.css
@@ -14,6 +14,9 @@
     height: 98vh; 
     margin: 20px;
     border-radius: 14px;
+
+    position: relative; 
+    overflow: hidden; 
   
 }
 .navbar{
@@ -43,11 +46,61 @@
     color:red;
 }
 .contain{
-
         position: absolute;
-        left: 0;
-        top: 50%;
-        transform: translateY(-60%);
-      
-
+        left: 50%; /* Center horizontally */
+        top: 50%; /* Center vertically */
+        transform: translate(-98%, -50%); /* Adjust for centering */
+        width: 90%; /* Use a percentage instead of a fixed width */
+        max-width: 700px; /* Add a max width */
+        color: white;
+        text-align: justify;
 }
+.button {
+    --color: #560bad;
+    font-family: inherit;
+    display: inline-block;
+    width: 8em;
+    height: 2.6em;
+    line-height: 2.5em;
+    margin: 20px;
+    position: relative;
+    cursor: pointer;
+    overflow: hidden;
+    border: 2px solid var(--color);
+    transition: color 0.5s;
+    z-index: 1;
+    font-size: 17px;
+    border-radius: 6px;
+    font-weight: 500;
+    color: var(--color);
+  }
+  
+  .button:before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    background: var(--color);
+    height: 150px;
+    width: 200px;
+    border-radius: 50%;
+  }
+  
+  .button:hover {
+    color: #fff;
+  }
+  
+  .button:before {
+    top: 100%;
+    left: 100%;
+    transition: all 0.7s;
+  }
+  
+  .button:hover:before {
+    top: -30px;
+    left: -30px;
+  }
+  
+  .button:active:before {
+    background: #3a0ca3;
+    transition: background 0s;
+  }
