--- a/menupage.css
+++ b/menupage.css
@@ -9,7 +9,7 @@ body{
     background-color: #8a2be2;
 }
 #maindiv{
-  background-color: #37075d;
+  background-color: #450c74;
     height: max-content; 
     margin: 20px;
     border-radius: 14px;
@@ -53,9 +53,12 @@ body{
   text-align: center;
   font-size: 20px;
   border-radius: 10px;
+  background-color: #6d29ac;
 }
-img{
-    height: 250px;
-    border-radius: 5%;
-    
+img.fixed-size{
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 5px;
+    margin-bottom: 10px;
 }
