--- a/Movies.css
+++ b/Movies.css
@@ -28,12 +28,17 @@
   color: azure;
     float: left;
     padding: 8px;
-    margin: 4px;
+    margin-left: 4.4%;
+    margin-top: 1%;
+    
 }
 .navbar li{
     display: inline-block;
     list-style-type: none;
   margin-right: 12px;
+  margin-right: 38px;
+  margin-top: 1%;
+  font-weight: 600;
   
 }
 .navbar li a{
@@ -55,27 +60,27 @@
         color: white;
         text-align: justify;
 }
-.button {
-    --color: #560bad;
-    font-family: inherit;
-    display: inline-block;
-    width: 8em;
-    height: 2.6em;
-    line-height: 2.5em;
-    margin: 20px;
-    position: relative;
-    cursor: pointer;
-    overflow: hidden;
-    border: 2px solid var(--color);
-    transition: color 0.5s;
-    z-index: 1;
-    font-size: 17px;
-    border-radius: 6px;
-    font-weight: 500;
-    color: var(--color);
-  }
+button {
+  --color: #560bad;
+  font-family: inherit;
+  display: inline-block;
+  width: 8em;
+  height: 2.6em;
+  line-height: 2.5em;
+  margin: 20px;
+  position: relative;
+  cursor: pointer;
+  overflow: hidden;
+  border: 2px solid var(--color);
+  transition: color 0.5s;
+  z-index: 1;
+  font-size: 17px;
+  border-radius: 6px;
+  font-weight: 500;
+  color: var(--color);
+}
   
-  .button:before {
+  button:before {
     content: "";
     position: absolute;
     z-index: -1;
@@ -85,22 +90,30 @@
     border-radius: 50%;
   }
   
-  .button:hover {
+  button:hover {
     color: #fff;
   }
   
-  .button:before {
+  button:before {
     top: 100%;
     left: 100%;
     transition: all 0.7s;
   }
   
-  .button:hover:before {
+  button:hover:before {
     top: -30px;
     left: -30px;
   }
   
-  .button:active:before {
+  button:active:before {
     background: #3a0ca3;
     transition: background 0s;
   }
+  
+  button:hover::before {
+    width: 9em;
+   }
+   span{
+    color: orangered;
+    
+   }
